--- a/logout.css
+++ b/logout.css
@@ -5,8 +5,15 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(#dcd6ff, #220049, #3a077c, #662bc5);
-    background-size: 400% 400%;
+    background-image: url('dark-minimal-mountains.png');
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+    background-position: center;
+    align-items: center;
 }
 
 .zaklad {
